# menu-management-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check-lint.yml  check-test.yml
app/: __init__.py
app/data/: inventory.json  menu.json
app/managers/: inventory_manager.py  menu_manager.py  order_manager.py
app/models/: inventory_item.py  menu_item.py  order.py  order_item.py
app/services/: menu_service.py  order_workflow.py
app/tests/managers/: conftest.py  test_inventory_manager.py  test_menu_manager.py
app/tests/models/: test_menu_item.py  test_order.py  test_order_item.py
app/tests/services/: test_menu_services.py
app/utils/: fuzzy_match.py  load_inventory.py  load_menu.py
docker/: Dockerfile.nginx  Dockerfile.prod  docker-compose.test.yml  docker-compose.yml
menu_app/: __init__.py  admin.py  forms.py  models.py  urls.py
menu_app/migrations/: 0001_initial.py
menu_app/models/: __init__.py  inventory.py  menu_item.py  order.py
menu_app/services/: __init__.py  db_utils.py  inventory_service.py  menu_service.py  menu_utils.py  order_service.py
menu_app/tests/: conftest.py
menu_app/views/: customer_views.py  staff_views.py
menu_management/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
menu_management/settings/: __init__.py  base.py  production.py  test.py
nginx/: nginx.conf
nginx/conf.d/: menu_management.conf
requirements/: base.txt  dev.txt  quality.txt  test.txt
static/css/: style.css
(+19 files in other folders)
